syntax = "proto3";

package auth;

// ====================== ACCOUNT ======================
service AccountService {
  rpc GetAllUsers (Empty) returns (AccountListResponse);
  rpc GetUser (GetUserRequest) returns (AccountResponse);
  rpc CreateUser (CreateAccountRequest) returns (AccountResponse);
  rpc UpdateUser (UpdateAccountRequest) returns (AccountResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// ====================== PROFILE ======================
service ProfileService {
  rpc GetProfiles (Empty) returns (ProfileListResponse);
  rpc GetProfileById (GetProfileRequest) returns (ProfileResponse);
  rpc GetProfileByAccountId (GetProfileByAccountIdRequest) returns (ProfileResponse);
  rpc CreateProfile (CreateProfileRequest) returns (ProfileResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (ProfileResponse);
  rpc DeleteProfile (DeleteProfileRequest) returns (DeleteProfileResponse);
}

// ====================== AUTH ======================
service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

// ====================== MESSAGE ======================

// Common
message Empty {}


// -------- ACCOUNT --------
message Account {
  string id = 1;
  string email = 2;
  string role = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message AccountListResponse {
  repeated Account users = 1;
}

message GetUserRequest {
  string id = 1;
}

message AccountResponse {
  Account user = 1;
}

message CreateAccountRequest {
  string email = 1;
  string password = 2;
  string role = 3; // map từ AccountRole (enum trong code)
}

message UpdateAccountRequest {
  string id = 1;
  string email = 2;
  string password = 3;
  string updatedAt = 4; // ISO string cho Date
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}


// -------- PROFILE --------
message Profile {
  string id = 1;
  string accountId = 2;
  string name = 3;
  string avatarUrl = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message ProfileListResponse {
  repeated Profile profiles = 1;
}

message GetProfileRequest {
  string id = 1;
}

message GetProfileByAccountIdRequest {
  string accountId = 1;
}

message ProfileResponse {
  Profile profile = 1;
}

message CreateProfileRequest {
  string accountId = 1;
  string name = 2;
  string avatarUrl = 3;
}

message UpdateProfileRequest {
  string id = 1;
  string name = 2;
  string avatarUrl = 3;
}

message DeleteProfileRequest {
  string id = 1;
}

message DeleteProfileResponse {
  bool success = 1;
  string message = 2;
}


// -------- AUTH --------
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3; // thuộc về Profile
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  Account account = 3;
  Profile profile = 4;
}
